# scratch-pad

./: CMakeLists.txt  License.txt  README.md  scratch-pad.sln  sidonia-config.h.in  sidonia.cxx
cpp/: CMakeLists.txt  sidonia-config.h.in
cpp/scratch-pad/: scratch-pad.vcxproj
cpp/somelib/: CMakeLists.txt  somelib.cxx  somelib.h  someprep.cxx
java/: my-app.sh  my-srv.sh  pom.xml
java/my-srv/: pom.xml
java/my-srv/src/main/java/com/mycompany/srv/: HelloWorld.java  JsonBean.java
java/my-srv/src/main/webapp/WEB-INF/: beans.xml
java/my-srv/src/test/java/com/mycompany/srv/: HelloWorldIT.java
java/test/: upload.sh
scratch-pad/: main.cpp
somelib/: CMakeLists.txt  somelib.cxx
